src/bootstrap/src/core/builder/cli_paths/snapshots/x_build.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: build
---
[Build] compile::Std
    targets: [aarch64-unknown-linux-gnu]
    - Set({library})
    - Set({library/alloc})
    - Set({library/compiler-builtins/compiler-builtins})
    - Set({library/core})
    - Set({library/panic_abort})
    - Set({library/panic_unwind})
    - Set({library/proc_macro})
    - Set({library/rustc-std-workspace-core})
    - Set({library/std})
    - Set({library/std_detect})
    - Set({library/sysroot})
    - Set({library/test})
    - Set({library/unwind})
[Build] tool::Rustdoc
    targets: [x86_64-unknown-linux-gnu]
<<<<<<< ferrocene/main
    - Set({build::src/librustdoc, build::src/tools/rustdoc})
[Build] bootstrap::ferrocene::tool::SelfTest
    targets: [x86_64-unknown-linux-gnu]
    - Set({build::ferrocene/tools/self-test})
[Build] bootstrap::ferrocene::tool::SymbolReport
    targets: [x86_64-unknown-linux-gnu]
    - Set({build::ferrocene/tools/symbol-report})
[Build] bootstrap::ferrocene::tool::Blanket
    targets: [x86_64-unknown-linux-gnu]
    - Set({build::ferrocene/tools/blanket})
[Build] bootstrap::ferrocene::tool::flip_link::FlipLink
    targets: [aarch64-unknown-linux-gnu]
    - Set({build::ferrocene/tools/flip-link})
||||||| 09ee43b2d60
    - Set({build::src/librustdoc, build::src/tools/rustdoc})
=======
    - Set({src/librustdoc, src/tools/rustdoc})
>>>>>>> rust-lang/rust/HEAD--generated-by-pull-upstream
