src/bootstrap/src/core/builder/cli_paths/snapshots/x_dist.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: dist
---
[Dist] dist::JsonDocs
    targets: [aarch64-unknown-linux-gnu]
    - Set({rust-docs-json})
[Dist] dist::Mingw
    targets: [aarch64-unknown-linux-gnu]
    - Set({rust-mingw})
[Dist] dist::Rustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({rustc})
[Dist] dist::Std
    targets: [aarch64-unknown-linux-gnu]
    - Set({rust-std})
[Dist] dist::RustcDev
    targets: [x86_64-unknown-linux-gnu]
    - Set({rustc-dev})
[Dist] dist::Src
    targets: [x86_64-unknown-linux-gnu]
    - Set({rust-src})
[Dist] dist::RustDev
    targets: [x86_64-unknown-linux-gnu]
    - Set({rust-dev})
[Dist] dist::ReproducibleArtifacts
    targets: [x86_64-unknown-linux-gnu]
    - Set({reproducible-artifacts})
[Dist] bootstrap::ferrocene::dist::Docs
    targets: [x86_64-unknown-linux-gnu]
    - Set({ferrocene-docs})
[Dist] bootstrap::ferrocene::dist::DocsDoctrees
    targets: [x86_64-unknown-linux-gnu]
    - Set({ferrocene-docs-doctrees})
[Dist] bootstrap::ferrocene::dist::flip_link::FlipLink
    targets: [aarch64-unknown-linux-gnu]
    - Set({flip-link})
[Dist] bootstrap::ferrocene::dist::SourceTarball
    targets: [x86_64-unknown-linux-gnu]
    - Set({ferrocene-src})
[Dist] bootstrap::ferrocene::dist::SelfTest
    targets: [x86_64-unknown-linux-gnu]
    - Set({ferrocene-self-test})
