src/bootstrap/src/core/builder/cli_paths/snapshots/x_install.snap
---
source: src/bootstrap/src/core/builder/cli_paths/tests.rs
expression: install
---
[Install] bootstrap::ferrocene::install::Std
    targets: [aarch64-unknown-linux-gnu]
    - Set({library/std})
[Install] bootstrap::ferrocene::install::Rustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({compiler/rustc})
